--- a/docker-compose/dev/.env
+++ b/docker-compose/dev/.env
@@ -7,3 +7,10 @@ GROUP_ID=1000
 
 HTTP_PORT=80
 HTTPS_PORT=443
+
+AUTH_SERVICE_MYSQL_PORT=3306
+
+MYSQL_ROOT_PASSWORD=password
+MYSQL_DATABASE=auth_service_db
+MYSQL_USER=db_user
+MYSQL_PASSWORD=pass4dbuser
